# pretend

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: labels.yml  release-drafter.yml
.github/workflows/: ci.yml  publish.yml  release-drafter.yml  repo.yml
pretend/: Cargo.toml  README.md
pretend-awc/: Cargo.toml  README.md
pretend-awc/src/: lib.rs
pretend-codegen/: Cargo.toml  README.md
pretend-codegen/src/: attr.rs  errors.rs  lib.rs  method.rs  utils.rs
pretend-codegen/src/method/: attr.rs  body.rs  checks.rs  headers.rs  query.rs  request.rs
pretend-codegen/src/utils/: attr.rs  single.rs  withtokens.rs
pretend-isahc/: Cargo.toml  README.md
pretend-isahc/src/: lib.rs
pretend-macros/: Cargo.toml
pretend-macros/src/: format.rs  lib.rs  method.rs  utils.rs
pretend-macros/src/method/: body.rs  headers.rs  query.rs  request.rs
pretend-reqwest/: Cargo.toml  README.md
pretend-reqwest/src/: blocking.rs  lib.rs
pretend-testclient/: Cargo.toml
pretend-testclient/src/: lib.rs
pretend-ureq/: Cargo.toml  README.md
pretend-ureq/src/: lib.rs
pretend/examples/: blocking.rs  bodies.rs  headers.rs  interceptor.rs  methods.rs  queries.rs  responses.rs  simple_get.rs  templating.rs
pretend/src/: client.rs  errors.rs  interceptor.rs  internal.rs  lib.rs  local.rs  resolver.rs  thirdparty.rs
pretend/src/local/: client.rs  errors.rs
pretend/tests/: clients_tester.rs  runtimes.rs  server.rs  test_blocking_clients.rs  test_blocking_local.rs  test_builds.rs  test_clients.rs  test_construction.rs  test_httpbin.rs  test_interceptors.rs  test_non_send_clients.rs  test_output.rs  test_pretend.rs  test_visibility.rs
pretend/tests/build-sources/: attribute.rs  bodies.rs  generics.rs  headers.rs  inconsistent_async.rs  receivers.rs  requests.rs
pretend/tests/builds/: attribute.stderr  bodies.rs  bodies.stderr  generics.rs  generics.stderr  headers.rs  headers.stderr  inconsistent_async.rs  inconsistent_async.stderr  non_method.rs  non_method.stderr  receivers.rs  receivers.stderr  requests.rs  requests.stderr
pretend/tests/builds-pre-1.54/: attribute.rs  bodies.rs  generics.rs  headers.rs  headers.stderr  inconsistent_async.rs  inconsistent_async.stderr  non_method.rs  receivers.rs  receivers.stderr  requests.rs
tests/default-features-build/: Cargo.toml
tests/default-features-build/src/: lib.rs
tests/default-features-build/tests/: test_builds.rs  test_no_https.rs
tests/default-features-build/tests/builds/: unsupported_client.rs  unsupported_client.stderr
tests/doc-propagation/: Cargo.toml
tests/doc-propagation/src/: lib.rs
tests/msrv-check/: Cargo.toml
tests/msrv-check/src/: lib.rs
