[package]
name = "pretend-awc"
edition = "2018"
version = "0.1.0"
description = "awc based client for pretend."
authors = ["Lucien XU <sfietkonstantin@free.fr>"]
license = "MIT"
homepage = "https://github.com/SfietKonstantin/pretend"
documentation = "https://docs.rs/pretend-isahc/latest/pretend_awc/"
repository = "https://github.com/SfietKonstantin/pretend"
keywords = ["http", "client", "web", "async", "declarative"]
categories = ["web-programming::http-client"]
readme = "README.md"

[dependencies]
pretend = { path = "../pretend",  version = "0.1.0" }
awc = "2.0"
