[package]
name = "pretend-awc"
edition = "2018"
version = "0.3.0"
description = "awc based client for pretend."
authors = ["Lucien XU <sfietkonstantin@free.fr>"]
license = "MIT"
homepage = "https://github.com/SfietKonstantin/pretend"
documentation = "https://docs.rs/pretend-awc/latest/pretend_awc/"
repository = "https://github.com/SfietKonstantin/pretend"
keywords = ["http", "client", "web", "async", "declarative"]
categories = ["web-programming::http-client"]
readme = "README.md"

[dependencies]
pretend = { path = "../pretend",  version = "0.3.0", features = ["local-error"] }
awc = { version = "2", default-features = false }

[features]
default = ["awc/default"]
