[package]
name = "pretend-codegen"
edition = "2018"
version = "0.3.0"
description = "codegen for pretend."
authors = ["Lucien XU <sfietkonstantin@free.fr>"]
license = "MIT"
homepage = "https://github.com/SfietKonstantin/pretend"
documentation = "https://docs.rs/pretend-codegen/latest/pretend_codegen/"
repository = "https://github.com/SfietKonstantin/pretend"
keywords = ["http", "client", "web", "async", "declarative"]
categories = ["web-programming::http-client"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
http = "0.2"
lazy_static = "1.4"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.5"
syn = { version = "1.0", features = ["full"] }
