[package]
name = "pretend-isahc"
edition = "2018"
version = "0.2.1"
description = "isahc based client for pretend."
authors = ["Lucien XU <sfietkonstantin@free.fr>"]
license = "MIT"
homepage = "https://github.com/SfietKonstantin/pretend"
documentation = "https://docs.rs/pretend-isahc/latest/pretend_isahc/"
repository = "https://github.com/SfietKonstantin/pretend"
keywords = ["http", "client", "web", "async", "declarative"]
categories = ["web-programming::http-client"]
readme = "README.md"

[dependencies]
pretend = { path = "../pretend",  version = "0.2.0" }
isahc = "1.3"
curl = ">=0.4, <0.4.36" # Make socket2 compatible with Rust 1.44
