[package]
name = "pretend-reqwest"
edition = "2018"
version = "0.2.2"
description = "reqwest based client for pretend."
authors = ["Lucien XU <sfietkonstantin@free.fr>"]
license = "MIT"
homepage = "https://github.com/SfietKonstantin/pretend"
documentation = "https://docs.rs/pretend-reqwest/latest/pretend_reqwest/"
repository = "https://github.com/SfietKonstantin/pretend"
keywords = ["http", "client", "web", "async", "declarative"]
categories = ["web-programming::http-client"]
readme = "README.md"

[dependencies]
pretend = { path = "../pretend",  version = "0.2.0" }
reqwest = { version = "0.11", default-features = false }

[features]
default = ["reqwest/default"]
blocking = ["reqwest/blocking"]
