[package]
name = "pretend-ureq"
edition = "2018"
version = "0.4.0"
description = "ureq based client for pretend."
authors = ["Lucien XU <sfietkonstantin@free.fr>"]
license = "MIT"
homepage = "https://github.com/SfietKonstantin/pretend"
documentation = "https://docs.rs/pretend-ureq/latest/pretend_ureq/"
repository = "https://github.com/SfietKonstantin/pretend"
keywords = ["http", "client", "web", "declarative"]
categories = ["web-programming::http-client"]
readme = "README.md"

[dependencies]
pretend = { path = "../pretend",  version = "0.4.0" }
ureq = { version = "2", default-features = false }

[features]
default = ["ureq/default"]
