[package]
name = "pretend"
version = "0.1.0"
authors = ["Lucien XU <sfietkonstantin@free.fr>"]
edition = "2018"

[dependencies]
async-trait = { version = "0.1.48" }
http = "0.2"
pretend-macros = { path = "../pretend-macros" }
serde = "1.0"
thiserror = "1.0"
url = "2.2"

[dev-dependencies]
pretend-reqwest = { path = "../pretend-reqwest" }
pretend-testclient = { path = "../pretend-testclient" }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0"

