[package]
name = "pretend"
version = "0.1.0"
authors = ["Lucien XU <sfietkonstantin@free.fr>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
bytes = "1.0"
encoding_rs = "0.8"
http = "0.2"
mime = "0.3"
pretend-codegen = { path = "../pretend-codegen" }
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
url = "2.2"

[dev-dependencies]
pretend-isahc = { path = "../pretend-isahc" }
pretend-reqwest = { path = "../pretend-reqwest" }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0"

