[package]
name = "pretend"
edition = "2018"
version = "0.1.1"
description = "pretend is a modular, Feign-inspired, HTTP client based on macros."
authors = ["Lucien XU <sfietkonstantin@free.fr>"]
license = "MIT"
homepage = "https://github.com/SfietKonstantin/pretend"
documentation = "https://docs.rs/pretend/latest/pretend/"
repository = "https://github.com/SfietKonstantin/pretend"
keywords = ["http", "client", "web", "async", "declarative"]
categories = ["web-programming::http-client"]
readme = "README.md"

[dependencies]
async-trait = "0.1"
bytes = "1.0"
encoding_rs = "0.8"
http = "0.2"
mime = "0.3"
pretend-codegen = { path = "../pretend-codegen", version = "0.1.0" }
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
url = "2.2"

[dev-dependencies]
actix-web = "3.3"
futures = "0.3"
pretend-isahc = { path = "../pretend-isahc" }
pretend-reqwest = { path = "../pretend-reqwest" }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0"

