[package]
name = "pretend-msrv-check"
version = "0.0.0"
edition = "2018"

[dependencies]
pretend = { path = "../../pretend" }
pretend-codegen = { path = "../../pretend-codegen" }

pretend-awc = { path = "../../pretend-awc" }
pretend-isahc = { path = "../../pretend-isahc" }
pretend-reqwest = { path = "../../pretend-reqwest" }
pretend-ureq = { path = "../../pretend-ureq" }

# Enforce MSRV
bitflags = ">=1.2, <1.3.0"
hyper = ">=0.14, <0.14.5"
isahc = ">=1.3, <1.4.0"

[workspace]
